# item_recognizer

./: .gitignore  README.md  app.py  pyproject.toml  utils.py
image_collector/: image_collector_ebay.py  image_collector_google.py
static/: script.js  style.css
templates/: index.html
train_model/: train_model_cnn.py
